# niri-session-manager

./: Cargo.toml  README.md  default.nix  flake.nix  module.nix
src/: main.rs
