[package]
name = "niri-session-manager"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.41.1", features = ["full"] }
clap = { version = "4.5.21", features = ["derive"] }
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.133"
anyhow = "1.0.94"
niri-ipc = "=0.1.10"
dirs = "5.0"
